--- a/idsection.html
+++ b/idsection.html
@@ -3,11 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>rakshak</title>
+    <title>User Login</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-  <body>
 </head>
 <style>
 
@@ -116,16 +113,19 @@ button:hover {
 }
 
 </style>
-</head>
 <body>
     <h1>An Initiative by the Ministry of Farming and Agriculture</h1>
     <div class="circular-container">
         <img src="1695216639085.jpg">
     </div>
     <div class="login-container">
-        <button type="button" class="btn btn-light btn-lg" onclick="window.location.href='idsection.html';">USER</button><br><br>
-        <button type="button" class="btn btn-light btn-lg">SCIENTIST</button>
-       
+        <form action="login.php" method="POST"> <!-- Replace 'login.php' with your server-side script -->
+            <div class="input-container">
+                <label for="mobileNumber">Mobile Number:</label>
+                <input type="tel" id="mobileNumber" name="mobileNumber" placeholder="Enter your mobile number" required>
+            </div>
+            <button type="submit" onclick="window.location.href='home.html';">Login</button>
+        </form>
     </div>
 </body>
 </html>
