--- a/home.html
+++ b/home.html
@@ -71,37 +71,37 @@
 
         <div class="content_container">
             <div class="img_container">
-                <img src="Res\rough.jpeg" alt="img" class="contImg">
+                <img src="one1.jpg" alt="img" class="contImg">
             </div>
             <div class="text_container">
-                <h2 class="conText"><span class="user_span">@user: </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
+                <h2 class="conText"><span class="user_span"> </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
             </div>
         </div>
 
         <div class="content_container">
             <div class="img_container">
-                <img src="Res\rough.jpeg" alt="img" class="contImg">
+                <img src="two.jpg" alt="img" class="contImg">
             </div>
             <div class="text_container">
-                <h2 class="conText"><span class="user_span">@user: </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
+                <h2 class="conText"><span class="user_span"> </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
             </div>
         </div>
 
         <div class="content_container">
             <div class="img_container">
-                <img src="Res\rough.jpeg" alt="img" class="contImg">
+                <img src="three.webp" alt="img" class="contImg">
             </div>
             <div class="text_container">
-                <h2 class="conText"><span class="user_span">@user: </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
+                <h2 class="conText"><span class="user_span"> </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
             </div>
         </div>
 
         <div class="content_container">
             <div class="img_container">
-                <img src="Res\rough.jpeg" alt="img" class="contImg">
+                <img src="four.jpg" alt="img" class="contImg">
             </div>
             <div class="text_container">
-                <h2 class="conText"><span class="user_span">@user: </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
+                <h2 class="conText"><span class="user_span"> </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
             </div>
         </div>
         
