--- a/home.html
+++ b/home.html
@@ -52,7 +52,7 @@
                     </li>
 
                     <li class="nav_item">
-                        <a href="#" class="nav_link">
+                        <a href="profile.html" class="nav_link">
                             <i class="ri-user-line nav_icon"></i>
                             <span class="nav_name">Profile</span>
                         </a>
