--- a/profile.html
+++ b/profile.html
@@ -147,14 +147,12 @@ button:hover {
     </div>
     <div class="login-container">
        
-        <h3>welcome <span id="userName">ashes</span><span></span> to our website</h3>
+        <!-- <h3>welcome <span id="userName">ashes</span><span></span> to our website</h3>
         <br>
         <h2>Your email: <span id="userEmail">dasashes@gmail.com</span></h2>
-        <br>
+        <br> -->
          <button id="signOutButton" class="btn btn-lg btn-primary">SIGN OUT</button>
     </div>
-    <script>
-   
-    </script>
+    
 </body>
 </html>
