--- a/home.html
+++ b/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.4.0/fonts/remixicon.css" rel="stylesheet">
     <link rel="stylesheet" href="home.css">
+    <script type="module" src="auth.js"></script>
     <title>Rakshak</title>
 </head>
 <body>
@@ -121,6 +122,7 @@ function activeLink(){
 
 list.forEach((item) => item.addEventListener('click',activeLink));
     </script>
-    
+     <script>alert(`welcome ${user.displayName} to the website`);</script>
+
 </body>
 </html>
