--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@ button:hover {
     </div>
     <div class="login-container">
         <button type="button" class="btn btn-light btn-lg" onclick="window.location.href='idsection.html';">USER</button><br><br>
-        <button type="button" class="btn btn-light btn-lg">SCIENTIST</button>
+        <button type="button" class="btn btn-light btn-lg" onclick="window.location.href='dashboard.html';">SCIENTIST</button>
        
     </div>
+   
 </body>
 </html>
