--- a/idsection.html
+++ b/idsection.html
@@ -128,7 +128,7 @@ button:hover {
                 <label for="mobileNumber">Mobile Number:</label>
                 <input type="tel" id="mobileNumber" name="mobileNumber" placeholder="Enter your mobile number" required>
             </div>
-            <button type="submit" onclick="window.location.href='language.html';">Login</button>
+            <button type="submit" >Login</button>
         </form>
         <br>
         <h3>or,</h3>
