--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
     <section class="section content_section">
 
         <div class="content_container">
-            <div class="img_container">
+            <div class="img_container" id="das">
                 <img src="one1.jpg" alt="img" class="contImg">
             </div>
             <div class="text_container">
@@ -129,6 +129,7 @@ list.forEach((item) => item.addEventListener('click',activeLink));
    >
 <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-app.js"></script>
 <script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-storage.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.7.0/firebase-database.js"></script>
 <script src="image.js">
  
 </script>
