--- a/home.html
+++ b/home.html
@@ -75,42 +75,42 @@
     <!-- Content -->
     <section class="section content_section">
 
-        <div class="content_container">
-            <div class="img_container" id="das">
-                <img src="one1.jpg" alt="img" class="contImg">
-            </div>
-            <div class="text_container">
-                <h2 class="conText"><span class="user_span"> </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
-            </div>
-        </div>
+       <div class="content_container">
+    <div class="img_container" id="das">
+        <img src="one1.jpg" alt="Sustainable Farming" class="contImg">
+    </div>
+    <div class="text_container">
+        <h2 class="conText"><span class="user_span"></span>Sustainable Farming Practices</h2>
+    </div>
+</div>
 
-        <div class="content_container">
-            <div class="img_container">
-                <img src="two.jpg" alt="img" class="contImg">
-            </div>
-            <div class="text_container">
-                <h2 class="conText"><span class="user_span"> </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
-            </div>
-        </div>
+<div class="content_container">
+    <div class="img_container">
+        <img src="two.jpg" alt="Organic Farming" class="contImg">
+    </div>
+    <div class="text_container">
+        <h2 class="conText"><span class="user_span"></span>Introduction to Organic Farming</h2>
+    </div>
+</div>
 
-        <div class="content_container">
-            <div class="img_container">
-                <img src="three.webp" alt="img" class="contImg">
-            </div>
-            <div class="text_container">
-                <h2 class="conText"><span class="user_span"> </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
-            </div>
-        </div>
+<div class="content_container">
+    <div class="img_container">
+        <img src="three.webp" alt="Modern Technology in Agriculture" class="contImg">
+    </div>
+    <div class="text_container">
+        <h2 class="conText"><span class="user_span"></span>Modern Technology in Agriculture</h2>
+    </div>
+</div>
 
-        <div class="content_container">
-            <div class="img_container">
-                <img src="four.jpg" alt="img" class="contImg">
-            </div>
-            <div class="text_container">
-                <h2 class="conText"><span class="user_span"> </span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. </h2>
-            </div>
-        </div>
-        
+<div class="content_container">
+    <div class="img_container">
+        <img src="four.jpg" alt="Crop Rotation Benefits" class="contImg">
+    </div>
+    <div class="text_container">
+        <h2 class="conText"><span class="user_span"></span>Benefits of Crop Rotation</h2>
+    </div>
+</div>
+
     </section>
 
     <!-- Necessary Scripts -->
