--- a/profile.html
+++ b/profile.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-    <script type="module" src="auth.js"></script>
+   
 </head>
 <style>
 
@@ -151,7 +151,7 @@ button:hover {
         <br>
         <h2>Your email: <span id="userEmail">dasashes@gmail.com</span></h2>
         <br> -->
-         <button id="signOutButton" class="btn btn-lg btn-primary">SIGN OUT</button>
+         <button id="signOutButton" class="btn btn-lg btn-primary" onclick="window.location.href='index.html';">SIGN OUT</button>
     </div>
     
 </body>
